--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "framer-motion": "^10.12.9",
     "html2canvas": "^1.4.1",
     "next": "13.4.1",
